# miMusic

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.json.example  config_loader.py  ecosystem.config.cjs  main.py  music_search.py  music_service.py  pyproject.toml
music_search_core/: indexer.py  models.py  search_engine.py
src/: lib.rs  server.rs
